seat service is initially done and other service code refactor
